web_appy/httpd24_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd24-rt
  labels:
    app: httpd24-app
spec:
  host: myhttpd.apps-crc.testing
  port:
    targetPort: 8080
  to:
    kind: Service
    name: httpd24-svc
